# lakefront

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  compose.yaml  conftest.py  generate_test_data.py  pyproject.toml  test.env
.github/workflows/: ci.yaml
pkg/cli/: pyproject.toml
pkg/cli/src/lakefront/cli/: __init__.py
pkg/cli/src/lakefront/cli/config/: __init__.py
pkg/cli/src/lakefront/cli/projects/: __init__.py
pkg/cli/src/peak/cli/: __init__.py
pkg/cli/src/polon/cli/: __init__.py
pkg/cli/tests/: test_cli.py
pkg/core/: pyproject.toml
pkg/core/src/lakefront/core/: __init__.py  bootstrap.py  config.py  exceptions.py  main.py  manager.py  models.py  viewer.py
pkg/core/src/peak/core/: __init__.py  bootstrap.py  config.py  manager.py  models.py
pkg/core/src/polon/core/: __init__.py  explorer.py  manager.py
pkg/core/tests/: conftest.py  file1.parquet  test_core_manager.py  test_main.py  test_project_configuration.py
pkg/tui/: pyproject.toml
pkg/tui/src/lakefront/tui/: __init__.py  app.py
pkg/tui/src/lakefront/tui/screens/: project.py
pkg/tui/src/lakefront/tui/widgets/: editor_pane.py  profiler_pane.py  results_pane.py  source_pane.py
pkg/tui/src/peak/tui/: __init__.py
pkg/tui/src/polon/tui/: __init__.py
src/lakefront/cli/: README.md  __init__.py
src/lakefront/cli/config/: __init__.py
src/lakefront/cli/projects/: __init__.py
src/lakefront/core/: README.md  __init__.py  analyzer.py  base.py  config.py  demo.py  exceptions.py  log.py  main.py  models.py  query.py
src/lakefront/log/: __init__.py
src/lakefront/models/: __init__.py  base.py
src/lakefront/tui/: app.py  app.tcss
src/lakefront/tui/modals/: confirm.py  source_attach.py
src/lakefront/tui/screens/: __init__.py  explore.py  navigation.py  project.py
src/lakefront/tui/widgets/: editor_pane.py  profiler_pane.py  results_pane.py  source_pane.py
src/lakefront/util/: __init__.py  fs.py
tests/cli/: test_cli.py
tests/core/: conftest.py  file2.csv  test_analyzer.py  test_config.py  test_init.py  test_main.py
tests/core/dataset1/: e286ad03270b43879b20841c7e8596f1-0.parquet
tests/tui/: test_app_settings.py  test_tui.py
tests/util/: test_fs.py
