[project]
name = "lakefront-cli"
version = "0.1.0"
description = "CLI for Lakehouse Observability Platform"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "lakefront-core",
    "typer>=0.24,<1.0.0",
]

[tool.uv.sources]
lakefront-core = { workspace = true }

[build-system]
requires = ["uv_build>=0.10.3,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "src"
namespace = true
module-name = "lakefront.cli"

[project.scripts]
lakefront = "lakefront.cli:app"
lf = "lakefront.cli:app"

