[project]
name = "peak-tui"
version = "0.1.0"
description = "TUI for Lakehouse Observability Platform"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "peak-core",
    "textual<=9.0.0"
]

[tool.uv.sources]
peak-core = { workspace = true }

[build-system]
requires = ["uv_build>=0.10.3,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "src"
namespace = true
module-name = "peak.tui"
